<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AutoSmart</string>
    <string name="default_web_client_id">230560220816-ch74l7u4e858gqdhgngdk28npo3d1knr.apps.googleusercontent.com</string>
    <string name="email">Email\n</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">REGISTRARSE</string>

    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <string name="profile_image">Imagen de perfil</string>
    <string name="add_vehicle">Añade vehículo</string>
    <string name="update_vehicle">Actualizar</string>

    <string name="api_ninjas_key">99o1qzm/KEx0w/h94UiQqg==vravc8lrvVYQxisS</string>


</resources>